[gd_scene load_steps=4 format=3 uid="uid://bj2issvfdp2w7"]

[ext_resource type="Script" path="res://Scripts/Main Scene.gd" id="1_55lho"]
[ext_resource type="Script" path="res://Scripts/LevelSelect.gd" id="3_oug31"]

[sub_resource type="GDScript" id="GDScript_dlfqt"]
script/source = "extends Label

# Called when the node enters the scene tree for the first time.
func _ready():
	self.add_theme_color_override(\"font_color\", Color(1,0,0))
"

[node name="MainScene" type="Node2D"]
script = ExtResource("1_55lho")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 1439.0
color = Color(0.341176, 0.870588, 0.435294, 1)

[node name="Title" type="Label" parent="."]
offset_left = 397.0
offset_top = 133.0
offset_right = 700.0
offset_bottom = 214.0
text = "Apple Fall"
horizontal_alignment = 1
vertical_alignment = 1
script = SubResource("GDScript_dlfqt")

[node name="Start Game" type="Button" parent="."]
offset_left = 379.0
offset_top = 304.0
offset_right = 716.0
offset_bottom = 384.0
text = "Start Game"

[node name="Label2" type="Label" parent="."]
offset_left = 379.0
offset_top = 663.0
offset_right = 742.0
offset_bottom = 686.0
text = "Level Select"
horizontal_alignment = 1

[node name="Level Select" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_oug31")

[node name="Level 1-1" type="Button" parent="Level Select"]
layout_mode = 0
offset_left = 99.0
offset_top = 720.0
offset_right = 211.0
offset_bottom = 813.0
text = "Level 1-1"

[node name="Level 1-2" type="Button" parent="Level Select"]
layout_mode = 0
offset_left = 379.0
offset_top = 720.0
offset_right = 491.0
offset_bottom = 812.0
text = "Level 1-2"

[node name="Level 1-3" type="Button" parent="Level Select"]
layout_mode = 0
offset_left = 628.0
offset_top = 720.0
offset_right = 739.0
offset_bottom = 812.0
text = "Level 1-3"

[node name="Level 1-4" type="Button" parent="Level Select"]
layout_mode = 0
offset_left = 924.0
offset_top = 720.0
offset_right = 1033.0
offset_bottom = 812.0
text = "Level 1-4"

[connection signal="pressed" from="Start Game" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Level Select/Level 1-1" to="Level Select" method="_on_level_one_pressed"]
[connection signal="pressed" from="Level Select/Level 1-2" to="Level Select" method="_on_level_1_2_pressed"]
[connection signal="pressed" from="Level Select/Level 1-3" to="Level Select" method="_on_level_1_3_pressed"]
[connection signal="pressed" from="Level Select/Level 1-4" to="Level Select" method="_on_level_1_4_pressed"]
